# Bspline_book

./: CMakeLists.txt  README.md  main.cpp  plot_curve.py
include/: nurbs.h
include/class_lis/: bsplinesurface.h  bsplinexx.h
include/kernel/: basis.h  evaluate.h  parameter.h  vector_operator.h
