cmake_minimum_required(VERSION 3.20)
project(Bspline_book)

set(CMAKE_CXX_STANDARD 14)
find_package(Eigen3 REQUIRED)
if(Eigen3_FOUND)
    message("Found Eigen3")
    message(STATUS "Eigen3 location: ${EIGEN3_INCLUDE_DIR}")
    include_directories(${EIGEN3_INCLUDE_DIR})
else(Eigen3_FOUND)
    message(FATAL_ERROR ”Eigen3 library not found”)
endif(Eigen3_FOUND)
add_executable(Bspline_book main.cpp include/class_lis/bsplinesurface.h)